[package]
name = "rldp-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
everscale-network = { path = "everscale-network" }
anyhow = "1.0.52"
base64 = "0.21"
serde_json = "1.0"
public-ip = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }
tracing-subscriber = "0.3"
everscale-crypto = "0.2.0"
hex = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
tl-proto = { version = "0.4", features = ["derive", "bytes"] }
bytes = "1.0"